cluster-talos/kubernetes/infrastructure/platform/longhorn-system/app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    # privileged required: hostPath mounts, /dev/longhorn, iscsi_tcp module
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
