cluster-talos/kubernetes/infrastructure/platform/longhorn-system/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    gatus.home-operations.com/endpoint: |
      conditions: ["[STATUS] < 500"]
      interval: 60s
      group: tools
spec:
  parentRefs:
    - name: main
      namespace: cilium
      sectionName: https
  hostnames:
    - longhorn.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: longhorn-frontend
          port: 80
